fix overflowing on body

--- a/src/assets/styles/src/main.css
+++ b/src/assets/styles/src/main.css
@@ -14,12 +14,12 @@
 
 @layer base {
   html,
-  body,
-  #app {
-    min-height: 100%;
+  body {
+    @apply min-h-full;
   }
 
   body {
+    overflow-x: hidden;
     color: theme(colors.primary);
     font-family: "Readex Pro", sans-serif;
   }
